fix(styles): fix border-radius on text inputs on safari

--- a/components/search-input.module.scss
+++ b/components/search-input.module.scss
@@ -28,6 +28,7 @@
 .input {
 	margin-left: lib.$layout-spacing-x-small;
 	padding-left: lib.$layout-spacing-x-small;
+	border-radius: 0px;
 	width: 100%;
 
 	transition: all .2s ease-out;
